[website] Modify footer

--- a/website/index.html
+++ b/website/index.html
@@ -263,14 +263,18 @@
                             </ul>
                         </div>
                         <div class="float-sm-right mt-4 mt-sm-0 text-center">
-                            <p class="copyright-desc mb-0"><small>2020 © Studio Rubik</small></p>
+                            <ul class="list-unstyled footer-list-menu credit">
+                                <li>
+                                    Made by <a href="https://twitter.com/MatsuraYuma">@MatsuraYuma</a> from <a href="https://studio-rubik.dev">Studio Rubik</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <!-- end row -->
             </div>
             <!-- end container -->
-        </section>
+        </footer>
         <!-- Footer alt start -->
 
         <!-- app js -->
