--- a/website/index.html
+++ b/website/index.html
@@ -67,11 +67,11 @@
                         <div class="hero-wrapper mb-4">
                             <h1 class="hero-title mb-4">Clip Inspiration on the Web, Quickly</h1>
                             <p class="hero-subtitle">
-                                Your own showcase of web design
+                                Your own scrapbook of web design
                             </p>
 
                             <div class="mt-4 mb-5">
-                                <a href="https://app.qlip.page" class="btn btn-primary mt-2 mr-2">Open Your Showcase</a>
+                                <a href="https://app.qlip.page" class="btn btn-primary mt-2 mr-2">Open Your Scrapbook</a>
                                 <a href="#features" class="btn btn-success mt-2 mr-2">Learn More</a>
                             </div>
                         </div>
@@ -190,9 +190,9 @@
                                     <i class="fas fa-tags icon-dual-primary" style="font-size: 22px;"></i>
                                 </span>
                             </div>
-                            <h3>Your Design Showcase</h3>
+                            <h3>Your Design Scrapbook</h3>
                             <p class="mb-4">
-                                Once you clip components, they are stored in your showcase that's accessible from any browser.
+                                Once you clip components, they are stored in your scrapbook that's accessible from any browser.
                             </p>
 
                             <div class="row">
@@ -203,12 +203,12 @@
                                         Organized with tag and domain</p>
                                     <p>
                                         <i class="fas fa-images"></i> 
-                                        Displayed in <a href="https://app.qlip.page" >your showcase</a></p>
+                                        Displayed in <a href="https://app.qlip.page" >your scrapbook</a></p>
                                 </div>
                             </div>
 
                             <div class="mt-4">
-                                <a href="https://app.qlip.page" class="btn btn-primary">Open Your Showcase<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
+                                <a href="https://app.qlip.page" class="btn btn-primary">Open Your Scrapbook<i data-feather="arrow-right" class="icons-sm ml-1"></i></a>
                             </div>
                         </div>
                     </div>
