[website] Edit copy

--- a/website/index.html
+++ b/website/index.html
@@ -187,12 +187,12 @@
                         <div class="mt-4 mt-lg-0">
                             <div class="avatar-md mb-4">
                                 <span class="avatar-title rounded-circle bg-soft-primary">
-                                    <i class="fas fa-tags icon-dual-primary" style="font-size: 22px;"></i>
+                                    <i class="fas fa-book icon-dual-primary" style="font-size: 22px;"></i>
                                 </span>
                             </div>
-                            <h3>Your Design Scrapbook</h3>
+                            <h3>Your Scrapbook of Web design</h3>
                             <p class="mb-4">
-                                Once you clip components, they are stored in your scrapbook that's accessible from any browser.
+                                Once you clip design, they are stored in your scrapbook that's accessible from any browser.
                             </p>
 
                             <div class="row">
